--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <img src="assets/images/profile/val.png" alt="profile-picture">
     <div class="landing-container">
       <div class="floating-icon">⚡</div>
-      <h1>Valiant S. Mi-ing</h1>
-      <h2>System Developer</h2>
+      <h1>Name</h1>
+      <h2>Role</h2>
       <br>
       <p>A showcase of my work, skills, and passion for System and Web Development.  
       Explore projects, experience, and more below.
@@ -38,7 +38,7 @@
     
       <div class="btn-group">
         <a href="#contact" class="btn-enter">Hire Me</a>
-        <a href="assets/Mi-ing,Valiant-Portfolio.pdf" class="btn-enter" download>Download Resume</a>
+        <a href="assets/asd.pdf" class="btn-enter" download>Download Resume</a>
       </div>
     </div>
   </section>
@@ -57,9 +57,6 @@
       <p id="description">
         I am a passionate System Developer with experience in designing, building, and maintaining software solutions that solve real-world problems. 
         I specialize in creating efficient, scalable, and user-friendly applications by combining strong technical skills with a keen eye for detail. 
-        My expertise includes backend and frontend development, database design, and systems integration. 
-        I enjoy working with modern frameworks, and agile methodologies to deliver high-quality results. 
-        Beyond coding, I value teamwork, continuous learning, and innovation, striving to provide solutions that not only meet client needs but also exceed expectations.
       </p>
 
       <h2>Interest</h2>
@@ -79,21 +76,6 @@
           <img class="sys" src="assets/images/interest/pexels-cookiecutter-17489150.jpg"> 
           <p>Designing and managing relational databases to ensure data integrity and performance.</p>
         </div>
-        <div class="card-two">
-          <h3>Solving Sudoku </h3>
-          <img class="sys" src="assets/images/interest/suduko.png">
-          <p>Enhancing logical thinking and pattern recognition through puzzle solving and brain games.</p>
-        </div>
-        <div class="card-two">
-          <h3>Judo</h3>
-          <img class="sys" src="assets/images/interest/pexels-kampus-6765029.jpg">
-          <p>Practicing discipline, focus, and physical fitness through martial arts and competitive training.</p>
-        </div>
-        <div class="card-two">
-          <h3>Mobile and PC Games</h3>
-          <img class="sys" src="assets/images/interest/pexels-jeshoots-com-147458-442576.jpg">
-          <p>Exploring game mechanics and team strategies through games like Call of Duty (Mobile) and Dota 2.</p>
-        </div>
       </div>
     </section>
 
@@ -102,21 +84,21 @@
       <div>
         <h2><span class="icon">🎓</span> Education</h2>
         <div class="about-item">
-          <h3 class="shool">Saint Louis University <span class="date">2020 - 2025</span></h3>
-          <p>Bachelor of Science in Information Technology</p>
-          <p class="school-address">Baguio City, Philippines</p>
+          <h3 class="shool">School Name <span class="date">Date</span></h3>
+          <p>School level</p>
+          <p class="school-address">Address</p>
         </div>
         <br>
         <div class="about-item">
-          <h3 class="shool">Mankayan National High School <span class="date">2020 - 2018</span></h3>
-          <p>Senior High School</p>
-          <p class="school-address">Benguet, Philippines</p>
+          <h3 class="shool">School Name <span class="date">Date</span></h3>
+          <p>School level </p>
+          <p class="school-address">Address</p>
         </div>
         <br>
         <div class="about-item">
-          <h3 class="shool">Mankayan National High School <span class="date">2014 - 2018</span></h3>
-          <p>Junior High School</p>
-          <p class="school-address">Benguet, Philippines</p>
+          <h3 class="shool">School Name <span class="date">Date</span></h3>
+          <p>School level</p>
+          <p class="school-address">Address</p>
         </div>
         <br>
       </div>
@@ -124,9 +106,8 @@
       <div>
         <h2><span class="icon">💼</span> Experience</h2>
         <div class="about-item">
-          <h3>Technical Support (Intern) <span class="date">January 2025 - May 2025</span></h3>
-          <p class="experience">Developed a web application for webinar training management for teachers and enhanced and suggest improvement
-            of the company website.
+          <h3>Technical Support <span class="date">Date</span></h3>
+          <p class="experience">Developed a web application for webinar trainin
           </p>
         </div>
       </div>
@@ -138,12 +119,12 @@
         <div class="skill">
           <h3>Programming Language</h3>
           <br>
-          <span class="skill-title"> <img src="assets/images/skills/java.png"> </span>Java</span>
+          <span class="skill-title"> <img src="assets/images/skills/java.png"> </span>Language</span>
             <span class="skill-percent">80%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 80%;"></div></div>
           </div>
           <div class="skill">
-            <span class="skill-title"> <img src="assets/images/skills/python.png"> Python</span>
+            <span class="skill-title"> <img src="assets/images/skills/python.png"> Language</span>
             <span class="skill-percent">35%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 35%;"></div></div>
           </div>
@@ -151,31 +132,31 @@
             
           <h3>Web Developement</h3>
             <br>
-            <span class="skill-title"><img src="assets/images/skills/php.png">Php</span>
+            <span class="skill-title"><img src="assets/images/skills/php.png">Web skill</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"> <img src="assets/images/skills/html-5.png">HTML</span>
+            <span class="skill-title"> <img src="assets/images/skills/html-5.png">Web skill</span>
             <span class="skill-percent">65%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 65%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/skills/js.png">Javascript</span>
+            <span class="skill-title"><img src="assets/images/skills/js.png">Web skill</span>
             <span class="skill-percent">55%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 55%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/skills/css-3.png">CSS</span>
+            <span class="skill-title"><img src="assets/images/skills/css-3.png">Web skill</span>
             <span class="skill-percent">45%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 45%;"></div></div>
           </div>
 
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/skills/wordpress.png">Wordpress</span>
+            <span class="skill-title"><img src="assets/images/skills/wordpress.png">Web skill</span>
             <span class="skill-percent">40%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 40%;"></div></div>
           </div>
@@ -183,7 +164,7 @@
           <h3>Database Management</h3>
             <br>
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/skills/mysql.png">MySQL</span>
+            <span class="skill-title"><img src="assets/images/skills/mysql.png">Web skill</span>
             <span class="skill-percent">75%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 75%;"></div></div>
           </div>
@@ -191,7 +172,7 @@
           <h3>Version Control</h3>
           <br>
           <div class="skill">
-            <span class="skill-title"><img src="assets/images/skills/git.png">Git</span>
+            <span class="skill-title"><img src="assets/images/skills/git.png">Web skill</span>
             <span class="skill-percent">60%</span>
             <div class="skill-bar"><div class="skill-progress" style="width: 60%;"></div></div>
           </div>
@@ -237,10 +218,10 @@
       <!-- Project 1 -->
       <div class="card-two" 
           onclick="openModal(this)" 
-          data-title="A QR Code-Based AR-Driven Two-Module Web Application for the SLU Museum of Igorot Culture and Arts"
-          data-desc="Our capstone project is an AR-driven progressive web application for museums that enhances the visitor experience through QR code scanning, AR interaction, and a virtual assistant for detailed artifact information. It also provides a curator module for managing artifact data, uploading media, generating QR codes, and tracking visitor analytics. The system is mobile-friendly and was developed in collaboration with museum curators, with an initial deployment focusing on about 50 artifacts."
+          data-title="A QR Code-Based"
+          data-desc="Our capstone project codes"
           data-tech="PHP, HTML, CSS, JavaScript"
-          data-role="System Architect"
+          data-role="Role"
           data-images="assets/images/projects/kultoura/1.png,assets/images/projects/kultoura/login.png,assets/images/projects/kultoura/kultoura2.png,assets/images/projects/kultoura/admin.png,assets/images/projects/kultoura/admin2.png">
         <img src="assets/images/projects/kultoura/about.png">
         <h3>Capstone Project</h3>
@@ -251,13 +232,13 @@
       <div class="card-two" 
           onclick="openModal(this)" 
           data-title="Wordy Game"
-          data-desc="A CORBA-based word guessing game with multiplayer functionality."
+          data-desc="A COR"
           data-tech="Java, CORBA"
           data-role="Backend Developer"
           data-images="assets/images/projects/wordy1.png,assets/images/projects/wordy2.png">
         <img src="assets/images/image.png">
-        <h3>Wordy Game</h3>
-        <p>A CORBA-based word guessing ..</p>
+        <h3>App</h3>
+        <p>Athsasdng ..</p>
       </div>
 
       <!-- Project 3 -->
@@ -269,8 +250,8 @@
           data-role="Backend Developer"
           data-images="assets/images/projects/Screenshot 2025-10-03 092242.png">
         <img src="assets/images/projects/Screenshot 2025-10-03 092242.png">
-        <h3>Transerve</h3>
-        <p>A document reviewer platform ..</p>
+        <h3>App</h3>
+        <p>AThis is a atform ..</p>
       </div>  
     </div>
   </section>
@@ -300,17 +281,17 @@
       <div class="card-container">
         <div class="card-two">
           <img src="assets/images/image.png">
-          <h3>Kultoura</h3>
+          <h3>Achievement 1</h3>
           <p>Our capstone project is an</p>
         </div>
         <div class="card-two">
           <img src="assets/images/image.png">
-          <h3>Wordy Game</h3>
+          <h3>Achievement 2</h3>
           <p>This is asd </p>
         </div>
         <div class="card-two">
           <img src="assets/images/image.png">
-          <h3>Document Reviewer</h3>
+          <h3>Achievement 2</h3>
           <p>This is asd </p>
         </div>  
       </div>  
@@ -377,8 +358,7 @@
     </section>
 
     <div class="map-container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1913.5852419980192!2d120.57181008864467!3d16.416165738438767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a1003aebf95b%3A0x4cbc05568cc663f7!2sQuezon%20Hill%20road!5e0!3m2!1sen!2sph!4v1759200050674!5m2!1sen!2sph" 
-        width="1300" 
+      <iframe src=""
         height="400" 
         style="border:0;" 
         allowfullscreen="" 
