--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <nav class="nav-box">
     <div class="top-nav"> 
       <h1>Portfolio</h1>  
+      <div class="hamburger" onclick="toggleMenu()">☰</div>
       <div class="nav-links">
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -38,7 +39,7 @@
     
       <div class="btn-group">
         <a href="#contact" class="btn-enter">Hire Me</a>
-        <a href="assets/Mi-ing,Valiant-Portfolio.pdf" class="btn-enter" download>Download Resume</a>
+        <a href="assets/Portfolio.pdf" class="btn-enter" download>Download Resume</a>
       </div>
     </div>
   </section>
