--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
       <div class="btn-group">
         <a href="#contact" class="btn-enter">Hire Me</a>
-        <a href="assets/Portfolio.pdf" class="btn-enter" download>Download Resume</a>
+        <a href="assets/Mi-ing,Valiant-Portfolio.pdf" class="btn-enter" download>Download Resume</a>
       </div>
     </div>
   </section>
